<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment"
    >

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:translationZ="10dp"
        android:clickable="true"
        android:alpha="1">
        <ProgressBar
            android:id="@+id/homeFragmentProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            style="?android:progressBarStyleLarge"/>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>


    <androidx.core.widget.NestedScrollView
        android:id="@+id/homeFragmentMainContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:isScrollContainer="true">




            <TextView
                android:id="@+id/dashboard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:text="@string/dashboard"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@id/line"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="10dp"
                android:background="@color/slategry"
                android:maxHeight="3dp"
                app:layout_constraintBottom_toTopOf="@id/card_view"
                app:layout_constraintTop_toBottomOf="@id/dashboard" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardBackgroundColor="@color/card_background"
                app:layout_constraintBottom_toTopOf="@id/card_view1"
                app:layout_constraintTop_toBottomOf="@id/line">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:orientation="vertical"
                        android:paddingBottom="0dp"
                        android:paddingEnd="15dp"
                        android:paddingStart="15dp"
                        android:paddingTop="10dp">

                        <!-- Title, secondary and supporting text -->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/totalmoney"
                            android:textAppearance="?attr/textAppearanceHeadline6" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/total_money_desc"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="?android:attr/textColorSecondary" />

                        <!--Money-->
                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/savings"
                            app:boxBackgroundColor="@color/card_background"
                            app:hintEnabled="true"
                            app:prefixText="$"
                            app:startIconDrawable="@drawable/ic_attach_money_black_24dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/totalMoney"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:enabled="false"
                                android:inputType="numberDecimal"
                                android:text="@string/zero"
                                android:textColor="@color/darkgrey"
                                />

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                    <!-- Buttons -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingEnd="15dp"
                        android:paddingStart="15dp">

                        <com.google.android.material.button.MaterialButton
                            style="?attr/borderlessButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:text="@string/change" />
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_view1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardBackgroundColor="@color/card_background"
                app:layout_constraintBottom_toTopOf="@id/card_view2"
                app:layout_constraintTop_toBottomOf="@id/card_view">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:orientation="vertical"
                        android:paddingBottom="0dp"
                        android:paddingEnd="15dp"
                        android:paddingStart="15dp"
                        android:paddingTop="10dp">

                        <!-- Title, secondary and supporting text -->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/goal"
                            android:textAppearance="?attr/textAppearanceHeadline6" />

                        <!--Money-->
                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Goal"
                            app:boxBackgroundColor="@color/card_background"
                            app:hintEnabled="true"
                            app:prefixText="$"
                            app:startIconDrawable="@drawable/ic_attach_money_black_24dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/goalMoney"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:enabled="false"
                                android:inputType="numberDecimal"
                                android:text="@string/zero"
                                android:textColor="@color/darkgrey"/>

                        </com.google.android.material.textfield.TextInputLayout>


                    </LinearLayout>

                    <!-- Buttons -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="0dp"
                        android:orientation="horizontal"
                        android:paddingEnd="15dp"
                        android:paddingStart="15dp">

                        <com.google.android.material.button.MaterialButton
                            style="?attr/borderlessButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:text="@string/change" />
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_view2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardBackgroundColor="@color/card_background"
                app:layout_constraintTop_toBottomOf="@id/card_view1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:orientation="vertical"
                        android:paddingBottom="0dp"
                        android:paddingEnd="15dp"
                        android:paddingStart="15dp"
                        android:paddingTop="10dp">

                        <!-- Title, secondary and supporting text -->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/credit_card"
                            android:textAppearance="?attr/textAppearanceHeadline6" />


                        <TextView
                            android:id="@+id/avaiMoney"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/avail_Money"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="?android:attr/textColorSecondary" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <!--card limit-->
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/cardLimit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_marginStart="5dp"
                            android:layout_weight="0.5"
                            android:hint="@string/cardLimit"
                            android:padding="0dp"
                            app:boxBackgroundColor="@color/card_background"
                            app:hintEnabled="true"
                            app:prefixText="$"
                            app:startIconDrawable="@drawable/ic_attach_money_black_24dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/eCardLimit"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="0dp"
                                android:enabled="false"
                                android:inputType="numberDecimal"
                                android:text="@string/zero"
                                android:textColor="@color/darkgrey"/>
                        </com.google.android.material.textfield.TextInputLayout>


                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/cardBalance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_marginStart="5dp"
                            android:layout_weight="0.5"
                            android:hint="@string/cardBalance"
                            android:padding="0dp"
                            app:boxBackgroundColor="@color/card_background"
                            app:hintEnabled="true"
                            app:prefixText="$"
                            app:startIconDrawable="@drawable/ic_attach_money_black_24dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/eCardBalance"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="0dp"
                                android:enabled="false"
                                android:inputType="numberDecimal"
                                android:text="@string/zero"
                                android:textColor="@color/darkgrey"/>
                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                    <!-- Buttons -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <com.google.android.material.button.MaterialButton
                            style="?attr/borderlessButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_weight="0.5"
                            android:text="@string/change" />

                        <com.google.android.material.button.MaterialButton
                            style="?attr/borderlessButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_marginRight="0dp"
                            android:layout_weight="0.5"
                            android:text="@string/change" />

                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>